--- a/articles/2012-03-05-FM/biblioFM.bib
+++ b/articles/2012-03-05-FM/biblioFM.bib
@@ -546,6 +546,21 @@ Proceedings of the 17th International Colloquium on Automata, Languages and Prog
 }
 
 
+@inproceedings{AM02,
+  author    = {Yasmina Abdedda\"{\i}m and
+               Oded Maler},
+  title     = {Preemptive Job-Shop Scheduling Using Stopwatch Automata},
+  booktitle = {TACAS},
+  year      = {2002},
+  pages     = {113-126},
+}
+  ee        = {http://dx.doi.org/10.1007/3-540-46002-0_9},
+  crossref  = {DBLP:conf/tacas/2002},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+
+
+
+
 @inproceedings{AMP98,
 	author = {Asarin, E. and Maler, O. and Pnueli, A.},
 	title = {On Discretization of Delays in Timed Automata and Digital Circuits},
@@ -779,19 +794,31 @@ Proceedings of the 9th International Conference on Concurrency Theory
 
 
 @article{blr05,
- author = {G. Behrmann and K.G. Larsen and J.I. Rasmussen},
- title = {Optimal scheduling using priced timed automata},
- journal = {SIGMETRICS Perform. Eval. Rev.},
- volume = {32},
- number = {4},
- year = {2005},
- issn = {0163-5999},
- pages = {34--40},
+	author    = {Gerd Behrmann and
+               Kim Guldstrand Larsen and
+               Jacob Illum Rasmussen},
+	title = {Optimal scheduling using priced timed automata},
+	journal = {SIGMETRICS Perform. Eval. Rev.},
+	volume = {32},
+	number = {4},
+	year = {2005},
+	issn = {0163-5999},
+	pages = {34--40},
+	publisher = {ACM},
+}
  doi = {http://doi.acm.org/10.1145/1059816.1059823},
- publisher = {ACM},
  address = {New York, NY, USA},
- }
 
+@inproceedings{BLR05formats,
+  author    = {Gerd Behrmann and
+               Kim Guldstrand Larsen and
+               Jacob Illum Rasmussen},
+  title     = {Beyond Liveness: Efficient Parameter Synthesis for Time
+               Bounded Liveness},
+  booktitle = {FORMATS},
+  year      = {2005},
+  pages     = {81-94},
+}
 
 @inproceedings{bm83,
 	author = {B. Berthomieu and M. Menasche},
