modifs Laurent puis Etienne
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/branches/pta@404 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/articles/2012-03-05-FM/biblioFM.bib
+++ b/articles/2012-03-05-FM/biblioFM.bib
@@ -1,7 +1,44 @@
+@inproceedings{m11,
+  author    = {Nicolas Markey},
+  title     = {Robustness in real-time systems},
+  booktitle = {SIES},
+  year      = {2011},
+  pages     = {28-34},
+  ee        = {http://doi.ieeecomputersociety.org/10.1109/SIES.2011.5953652},
+  crossref  = {DBLP:conf/sies/2011},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+@proceedings{DBLP:conf/sies/2011,
+  title     = {Industrial Embedded Systems (SIES), 2011 6th IEEE International
+               Symposium on, Vasteras, Sweden, 15-17 June, 2011},
+  booktitle = {SIES},
+  publisher = {IEEE},
+  year      = {2011},
+  isbn      = {978-1-61284-818-1},
+  ee        = {http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=5937480},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
 
 %% Etienne ANDRE official bib file
 %% Last modif : 2011/12/08
 
+
+@article{cgjlv03,
+  author    = {Edmund M. Clarke and
+               Orna Grumberg and
+               Somesh Jha and
+               Yuan Lu and
+               Helmut Veith},
+  title     = {Counterexample-guided abstraction refinement for symbolic
+               model checking},
+  journal   = {J. ACM},
+  volume    = {50},
+  number    = {5},
+  year      = {2003},
+  pages     = {752-794},
+  ee        = {http://doi.acm.org/10.1145/876638.876643},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
                       MES PUBLICATIONS                      
